# NeoNet-demo-app

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  app.rs  config.rs  main.rs  ui.rs
